<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/backgroundplashscreen">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="@dimen/lnPaddingTop"
        android:paddingLeft="@dimen/lnPaddingLeft"
        android:paddingRight="@dimen/lnPaddingRight"
        android:background="@color/colorGrayBg"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/iconbag"
            android:layout_gravity="center"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title1"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/titleSize"
            android:gravity="center"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/iconmoney"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/imgMarginTop"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title2"
            android:textSize="@dimen/titleSize"
            android:textColor="@color/colorWhite"
            android:textAlignment="center"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/iconbag"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/imgMarginTop"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title3"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/titleSize"
            android:textAlignment="center"/>
    </LinearLayout>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|bottom"
        android:src="@drawable/lazadacustomerlogo"
        android:layout_marginBottom="@dimen/imgMarginBottom"/>

</FrameLayout>